--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,8 +33,11 @@ jobs:
       matrix:
         #ruby-version: ['2.0', '2.3', '2.4', '2.7', '3.0']
         #os: [ubuntu-latest, macos-latest, windows-latest]
-        ruby-version: ['2.0', '2.4', '2.7']
+        ruby-version: ['2.4.10', '2.7.3']
         os: [ubuntu-latest]
+        include:
+          - ruby-version: '2.0.1'
+            os: ubuntu-18.04
     runs-on: ${{ matrix.os }}
     env:
       BUNDLE_GEMFILE: lib/vimgolf/Gemfile
