--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,22 +33,22 @@ jobs:
       matrix:
         #ruby-version: ['2.0', '2.3', '2.4', '2.7', '3.0']
         #os: [ubuntu-latest, macos-latest, windows-latest]
-        ruby-version: ['2.4.10', '2.7.3']
+        ruby-version: ['2.1.9', '2.4.10', '2.7.3']
         os: [ubuntu-latest]
         include:
           - ruby-version: '2.0.1'
             os: ubuntu-18.04
     runs-on: ${{ matrix.os }}
-    env:
-      BUNDLE_GEMFILE: lib/vimgolf/Gemfile
     steps:
       - name: Check out git tree
         uses: actions/checkout@v2
       - name: Set up Ruby
         uses: ruby/setup-ruby@v1
+        env:
+          BUNDLE_GEMFILE: lib/vimgolf/Gemfile
         with:
           ruby-version: ${{ matrix.ruby-version }}
           bundler-cache: true
       - name: Run RSpec tests
-        run: bundle exec rake
+        run: cd lib/vimgolf/ && bundle exec rake
 
