--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,12 +32,13 @@ jobs:
     strategy:
       matrix:
         #ruby-version: ['2.0', '2.3', '2.4', '2.7', '3.0']
-        #os: [ubuntu-latest, macos-latest, windows-latest]
-        ruby-version: ['2.1.9', '2.4.10', '2.7.3']
-        os: [ubuntu-latest]
+        os: [ubuntu-latest, macos-latest]
+        ruby-version: ['2.3.8', '2.4.10', '2.7.3', '3.0.1']
         include:
-          - ruby-version: '2.0.1'
-            os: ubuntu-18.04
+          - os: ubuntu-latest
+            ruby-version: '2.1.9'
+          - os: windows-latest
+            ruby-version: '2.7.3'
     runs-on: ${{ matrix.os }}
     steps:
       - name: Check out git tree
