Drop Windows, set fail-fast=false

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,14 +31,16 @@ jobs:
   client-rspec:
     strategy:
       matrix:
+        fail-fast: false
         #ruby-version: ['2.0', '2.3', '2.4', '2.7', '3.0']
         os: [ubuntu-latest, macos-latest]
         ruby-version: ['2.3.8', '2.4.10', '2.7.3', '3.0.1']
         include:
           - os: ubuntu-latest
             ruby-version: '2.1.9'
-          - os: windows-latest
-            ruby-version: '2.7.3'
+          #- os: windows-latest
+          #  ruby-version: '2.7.3'
+          #  (Windows fails on spec/lib/cli_spec.rb:115)
     runs-on: ${{ matrix.os }}
     steps:
       - name: Check out git tree
