Fix syntax of container environment

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,8 +38,8 @@ jobs:
       postgres:
         image: postgres:latest
         env:
-          - POSTGRES_USER: vimgolfgh
-          - POSTGRES_PASSWORD: vimgolfpw
+          POSTGRES_USER: vimgolfgh
+          POSTGRES_PASSWORD: vimgolfpw
         ports:
           - '5432'
     env:
